unitas-rs/pattern-macro/tests/compile_fails/missing_pattern.stderr
error: expected a pattern as a string literal
 --> tests/compile_fails/missing_pattern.rs:4:5
  |
4 |     pattern!(0,);
  |     ^^^^^^^^^^^^
  |
  = note: this error originates in the macro `pattern` (in Nightly builds, run with -Z macro-backtrace for more info)
